--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Djole ima malu kitu</title>
+    <title>S.Z.R. Peka</title>
 </head>
 <body>
     <header>Ovo je header</header>
